correctif version mobile

--- a/ousmand/src/component/mainpage.css
+++ b/ousmand/src/component/mainpage.css
@@ -133,6 +133,18 @@
         margin:2%;
 
     }
+    .presentationText3{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: flex-start;
+        width: 90%;
+        font-family: lobster;
+       
+        text-align: justify;
+        margin:2%;
+
+    }
     .presentationPic{
         width: 80%;
         border-radius: 5%;
